wrangled with a new blog post about fontawesome and gatsby. used code blocks with the code and had to edit layout.css to style inline code blocks correctly. still have to write about accessibility - and figure out how to do it myself. added a new pic for the blog post, and also edited the theme for prism.js. If someone pulls the code down from the repo, it won't work properly because i had to edit the theme in the node_modules directory which is covered by the .gitignore. hmmmmmmmmm....cross that bridge when I come to it.

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -732,6 +732,10 @@ figcaption {
   width: 79%;
 }
 
+:not(pre) > code[class*='language-'] {
+  white-space: pre;
+}
+
 @media only screen and (max-width: 600px) {
   html {
     font-size: 80%;
